// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@nx/vite:init dependencies for package.json should add vite packages and react-related dependencies for vite 1`] = `
{
  "dependencies": {
    "existing": "1.0.0",
  },
  "devDependencies": {
    "@nx/vite": "0.0.1",
    "@vitejs/plugin-react": "^4.2.0",
    "@vitest/ui": "^1.0.4",
    "existing": "1.0.0",
    "vite": "^5.0.0",
    "vitest": "^1.0.4",
  },
  "name": "@proj/source",
}
`;

exports[`@nx/vite:init dependencies for package.json should support --testEnvironment=edge-runtime 1`] = `
{
  "dependencies": {},
  "devDependencies": {
    "@edge-runtime/vm": "~3.0.2",
    "@nx/vite": "0.0.1",
    "@vitest/ui": "^1.0.4",
    "vite": "^5.0.0",
    "vitest": "^1.0.4",
  },
  "name": "@proj/source",
}
`;

exports[`@nx/vite:init dependencies for package.json should support --testEnvironment=happy-dom 1`] = `
{
  "dependencies": {},
  "devDependencies": {
    "@nx/vite": "0.0.1",
    "@vitest/ui": "^1.0.4",
    "happy-dom": "~9.20.3",
    "vite": "^5.0.0",
    "vitest": "^1.0.4",
  },
  "name": "@proj/source",
}
`;

exports[`@nx/vite:init dependencies for package.json should support --testEnvironment=jsdom 1`] = `
{
  "dependencies": {},
  "devDependencies": {
    "@nx/vite": "0.0.1",
    "@vitest/ui": "^1.0.4",
    "jsdom": "~22.1.0",
    "vite": "^5.0.0",
    "vitest": "^1.0.4",
  },
  "name": "@proj/source",
}
`;
